[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/EnemyWave.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Level1.gd" type="Script" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="SpawTimer" type="Timer" parent="."]

[node name="EnemyWave" parent="." instance=ExtResource( 2 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 544, 696 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 544, 696 )

[connection signal="timeout" from="SpawTimer" to="." method="_on_SpawTimer_timeout"]
